--- a/JWT_UI/appsettings.json
+++ b/JWT_UI/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "ConnetionString": "Host= ::1; Port=5432 ;Database = JWT.Intercepter; UserId = postgres; Password = 2244;"
+    "ConnetionString": "Host= ::1; Port=5432 ;Database = JWTIntercepter; UserId = postgres; Password = 2244;"
   },
   "Logging": {
     "LogLevel": {
